<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Caladrius</string>

    <string name="query_activity_title">Query Activity</string>

    <string name="title_activity_graph">GraphActivity</string>
    <string name="dummy_information">\tBPM: XXXXXXXXXX\n
                                     BASAL CALORIC: XXXXXXXXXX\n
                                     WEIGHT: XXXXXXXXXXX\n
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="category_home">Home</string>
    <string name="category_rss">RSS</string>
    <string name="view_rss_settings">View RSS Settings</string>
    <string name="single_day">" Single day"</string>
    <string name="several_days">" Several days"</string>

    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>

    <string name="item_bpm">BPM</string>
    <string name="item_steps">Steps</string>
    <string name="submit">Submit</string>

    <string name="cmp_lt"> "&lt;"</string>
    <string name="cmp_lte">"≤"</string>
    <string name="cmp_eq"> "="</string>
    <string name="cmp_gt"> "&gt;"</string>
    <string name="cmp_gte">"≥"</string>

    <string name="editor_confirmation_defaulttitle">"Closing Editor"</string>
    <string name="editor_confirmation_defaultmessage">"Are you sure you want to discard unsaved changes?"</string>
    <string name="time_range">Time Range</string>
    <string name="hint_time_range">Time Range</string>
    <string name="graph_type">Graph Type</string>
    <string name="graph_stats">Graph Stats</string>
    <string name="graph_color">Graph Color</string>
    <string name="graph_title">Graph Title</string>
    <string name="hint_graph_title">Title</string>

    <string name="editor_activity_title_new_graph">Add a Graph</string>
    <string name="editor_activity_title_edit_graph">Edit Graph</string>
    <string name="editor_activity_title_query_data">Query data</string>


    <string name="time_range_today">Today</string>
    <string name="time_range_week">Week</string>
    <string name="time_range_month">Month</string>
    <string name="time_range_year">Year</string>

    <string name="type_bar">Bar</string>
    <string name="type_points">Points</string>
    <string name="type_Line">Line</string>

    <string name="type_points_2">Points</string>
    <string name="type_Line_2">Line</string>

    <string name="stats_bpm">minutesSedentary</string>
    <string name="stats_steps">steps</string>
    <string name="stats_caloric">calories</string>
    <string name="stats_caloriesBMR">caloriesBMR</string>
    <string name="stats_distance">distance</string>
    <string name="stats_minutesLightlyActive">minutesLightlyActive</string>
    <string name="stats_minutesFairlyActive">minutesFairlyActive</string>
    <string name="stats_minutesVeryActive">minutesVeryActive</string>
    <string name="stats_activityCalories">activityCalories</string>

    <string name="MinutesSedentary">Minutes Sedentary</string>
    <string name="Steps">Steps</string>
    <string name="Calories">Calories</string>
    <string name="CaloriesBMR">CaloriesBMR</string>
    <string name="Distance">Distance</string>
    <string name="MinutesLightlyActive">Minutes Lightly Active</string>
    <string name="MinutesFairlyActive">Minutes Fairly Active</string>
    <string name="MinutesVeryActive">Minutes Very Active</string>
    <string name="ActivityCalories">Activity Calories</string>


    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_gray">Gray</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>


    <!-- Dialog message to ask the user to confirm deleting the current graph [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this graph?</string>
    
    <!-- Dialog button text for the option to confirm deleting the current graph [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    
    <!-- Dialog button text for the option to cancel deletion of the current graph [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to keep editing the current graph [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current graph was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_graph_successful">Graph deleted</string>

    <!-- Toast message in editor when current graph has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_graph_failed">Error with deleting graph</string>

    <!-- Toast message in editor when new graph has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_graph_successful">Graph saved</string>

    <!-- Toast message in editor when new graph has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_graph_failed">Error with saving graph</string>

    <!-- Toast message in editor when new graph has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_graph_successful">Graph updated</string>

    <!-- Toast message in editor when new graph has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_graph_failed">Error with updating graph</string>

    <!-- Label for editor menu option to save graph and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current graph [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>


    <!-- Label for overflow menu option that inserts fake graph data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all graph data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Graphs</string>
    <string name="fitbit_login">Fitbit Login</string>
    <string name="add_second_graph">Add second graph</string>
    <string name="graph_2_type">Graph 2 Type</string>
    <string name="graph_2_stats">Graph 2 Stats</string>
    <string name="graph_2_color">Graph 2 Color</string>
    <string name="relative_time_range">Relative time range</string>
    <string name="relative_days">Relative days</string>


    <string name="error_contact_server">Error: we could not contact our server</string>
    <string name="log_out">Log out</string>
    <string name="Info">Info</string>

    <string name="rss_feed_default_name">Unnamed Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Caladrius</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="FitbitError">Could not query fitbit servers; you might have hit the query limit</string>

    <string name="delete_all_feeds_fail">Could not delete all feeds</string>
</resources>
